--- a/src/pages/login/style.css
+++ b/src/pages/login/style.css
@@ -1,6 +1,6 @@
 .size {
   border-radius: 7px;
-  box-shadow: 1px 1px 50px 10px rgba(1,1,1,0.40);
+  box-shadow: 1px 1px 50px 10px rgba(1, 1, 1, 0.40);
   padding: 20px;
   width: 250px;
 }
