--- a/src/pages/Feedback/style.css
+++ b/src/pages/Feedback/style.css
@@ -1,19 +1,14 @@
-.size {
-  border-radius: 7px;
-  box-shadow: 1px 1px 50px 10px rgba(1, 1, 1, 40);
-  padding: 20px;
-  width: 250px;
-}
-
-input {
-  margin-bottom: 5px;
-  margin-top: 5px;
-}
-
 .flexbox {
   align-items: center;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 200vh;
   justify-content: center;
+}
+
+.size {
+  border-radius: 7px;
+  box-shadow: 1px 1px 50px 10px rgba(1, 1, 1, 40);
+  padding: 20px;
+  width: 350px !important;
 }
