--- a/src/pages/Feedback/style.css
+++ b/src/pages/Feedback/style.css
@@ -10,5 +10,5 @@
   border-radius: 7px;
   box-shadow: 1px 1px 50px 10px rgba(1, 1, 1, 40);
   padding: 20px;
-  width: 350px !important;
+  width: 350px;
 }
