--- a/src/pages/Feedback/style.css
+++ b/src/pages/Feedback/style.css
@@ -17,3 +17,13 @@ input {
   height: 100vh;
   justify-content: center;
 }
+
+table {
+  border-collapse: collapse;
+}
+
+td , th {
+  border: 1px solid #999;
+  padding: 0.5rem;
+  text-align: left;
+}
