--- a/src/pages/Game/style.css
+++ b/src/pages/Game/style.css
@@ -19,10 +19,7 @@ input {
 }
 
 .button {
-  background-color: green;
-  border-radius: 5px;
   box-shadow: 1px 1px 5px 1px rgba(1, 1, 1, 0.75);
-  display: flex;
   margin-top: 15px;
-  padding: 10px;
+  text-align: center;
 }
