--- a/src/pages/Game/style.css
+++ b/src/pages/Game/style.css
@@ -1,8 +1,9 @@
 .size {
   border-radius: 7px;
   box-shadow: 1px 1px 50px 10px rgba(1, 1, 1, 40);
-  padding: 20px;
   width: 250px;
+  margin: 0;
+  padding: 0;
 }
 
 input {
