--- a/src/pages/Feedback/style.css
+++ b/src/pages/Feedback/style.css
@@ -1,13 +1,47 @@
-.flexbox {
+.size-feedback {
+  border-radius: 7px;
+  box-shadow: 1px 1px 50px 10px rgba(1, 1, 1, 40);
+  display: flex;
+  flex-direction: column;
+  height: 500px;
+  width: 500px;
+}
+
+.feedback-container {
   align-items: center;
   display: flex;
   flex-direction: column;
-  height: 200vh;
-  justify-content: center;
+  margin: auto;
+  padding: 20px;
 }
 
-.size {
-  border-radius: 7px;
-  box-shadow: 1px 1px 50px 10px rgba(1, 1, 1, 40);
-  width: 350px;
+.answer-feedback {
+  color: crimson;
+  font-family: Roboto Condensed, sans-serif;
+  font-size: 30px;
+}
+
+.pontuation {
+  font-family: Roboto Condensed, sans-serif;
+  font-size: 20px;
+}
+
+.score-assertions {
+  font-family: Montserrat, sans-serif;
+}
+
+.button-feedback {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  background-color: crimson;
+  border-style: none;
+  color: white;
+  height: 35px;
+  margin-top: 10px;
+  width: 250px;
+}
+
+a{
+  text-decoration: none;
 }
