--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -1,16 +1,21 @@
-nav {
+.nav-container {
   align-items: center;
   background: #161616;
+  border-radius: 7px 7px 0 0;
   display: flex;
+  height: 80px;
+  justify-content: space-around;
 }
 
 h3 {
   color: aliceblue;
+  font-family: Roboto condensed, sans-serif;
   margin: 5px;
   padding: 5px;
 }
 
 .img {
   border-radius: 100%;
+  height: 50px;
   width: 50px;
 }
