--- a/src/pages/Game/style.css
+++ b/src/pages/Game/style.css
@@ -1,9 +1,18 @@
-.size {
+.size-game {
   border-radius: 7px;
   box-shadow: 1px 1px 50px 10px rgba(1, 1, 1, 40);
-  margin: 0;
-  padding: 0;
-  width: 250px;
+  display: flex;
+  flex-direction: column;
+  height: 500px;
+  width: 500px;
+}
+
+.btn-container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  padding: 20px;
 }
 
 input {
@@ -19,8 +28,41 @@ input {
   justify-content: center;
 }
 
-.button {
-  box-shadow: 1px 1px 5px 1px rgba(1, 1, 1, 0.75);
-  margin-top: 15px;
-  text-align: center;
+.button-next {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  background-color: crimson;
+  border-style: none;
+  color: white;
+  height: 35px;
+  margin-top: 10px;
+  width: 250px;
+}
+
+.timer {
+  color: crimson;
+  display: flex;
+  font-family: Roboto Condensed, sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  justify-content: center;
+}
+
+.loading {
+  animation: spin 2s linear infinite;
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid  crimson;
+  border-radius: 50%;
+  height: 80px;
+  width: 80px;
+}
+
+a{
+  text-decoration: none;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
