teste fonte roboto code climate

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -9,7 +9,7 @@
 
 h3 {
   color: aliceblue;
-  font-family: Roboto condensed, Arial, Verdana, Tahoma, sans-serif;
+  font-family: Roboto condensed, Verdana, sans-serif;
   margin: 5px;
   padding: 5px;
 }
