--- a/src/components/Question/style.css
+++ b/src/components/Question/style.css
@@ -1,6 +1,6 @@
 .category {
   color: black;
-  font-family: Roboto Condensed, sans-serif;
+  font-family: Roboto Condensed, Verdana, sans-serif;
   text-align: center;
 }
 
