--- a/src/pages/Ranking/style.css
+++ b/src/pages/Ranking/style.css
@@ -14,7 +14,7 @@
   border-radius: 7px 7px 0 0;
   color: white;
   display: flex;
-  font-family: Roboto Condense, sans-serif;
+  font-family: Roboto Condense, Verdana, sans-serif;
   font-size: 30px;
   height: 80px;
   justify-content: center;
