--- a/src/pages/Feedback/style.css
+++ b/src/pages/Feedback/style.css
@@ -36,6 +36,7 @@
   border-style: none;
   color: white;
   display: flex;
+  font-family: Montserrat, sans-serif;
   height: 35px;
   justify-content: center;
   margin-top: 10px;
