--- a/src/pages/Game/style.css
+++ b/src/pages/Game/style.css
@@ -34,6 +34,7 @@ input {
   border-style: none;
   color: white;
   display: flex;
+  font-family: Montserrat, sans-serif;
   height: 35px;
   justify-content: center;
   margin-top: 10px;
