--- a/src/pages/Login/style.css
+++ b/src/pages/Login/style.css
@@ -44,6 +44,7 @@
   background-color: crimson;
   border-style: none;
   color: white;
+  font-family: Montserrat, sans-serif;
   height: 35px;
   margin-top: 10px;
   width: 250px;
@@ -53,6 +54,7 @@
   background-color: crimson;
   border-style: none;
   color: white;
+  font-family: Montserrat, sans-serif;
   height: 35px;
   width: 250px;
 }
@@ -60,6 +62,7 @@
 .btn-login-disable {
   border: 1px solid crimson;
   color: crimson;
+  font-family: Montserrat, sans-serif;
   height: 35px;
   width: 250px;
 }
